--- a/po/fi.po
+++ b/po/fi.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: LibFM 1.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-11-13 22:15+0100\n"
-"PO-Revision-Date: 2013-09-03 12:59+0000\n"
+"PO-Revision-Date: 2013-11-14 17:09+0000\n"
 "Last-Translator: Juhani <juhaninumminen0@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: fi\n"
@@ -17,7 +17,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1378213187.0\n"
+"X-POOTLE-MTIME: 1384448942.0\n"
 
 #: ../data/libfm-pref-apps.desktop.in.h:1 ../data/ui/preferred-apps.glade.h:1
 msgid "Preferred Applications"
@@ -32,12 +32,10 @@ msgid "Create new or change existing desktop entry"
 msgstr "Luo uusi tai muuta olemassa olevaa työpöytäkäynnistintä"
 
 #: ../data/ui/app-chooser.glade.h:1
-#, fuzzy
 msgid "Choose Application"
 msgstr "Valitse sovellus"
 
 #: ../data/ui/app-chooser.glade.h:2
-#, fuzzy
 msgid "<b>File type to be opened:</b>"
 msgstr "<b>Avattava tiedostotyyppi:</b>"
 
@@ -95,9 +93,8 @@ msgid "_Set selected application as default action of this file type"
 msgstr "Aseta valittu sovellus _oletustoiminnoksi tälle tiedostotyypille"
 
 #: ../data/ui/ask-rename.glade.h:1
-#, fuzzy
 msgid "Confirm File Replacing"
-msgstr "Aseta valittu sovellus _oletustoiminnoksi tälle tiedostotyypille"
+msgstr "Vahvista tiedoston korvaaminen"
 
 #: ../data/ui/ask-rename.glade.h:2
 msgid "_Skip"
@@ -126,9 +123,8 @@ msgid "with the following file?"
 msgstr "seuraavalla tiedostolla?"
 
 #: ../data/ui/ask-rename.glade.h:9
-#, fuzzy
 msgid "_File name:"
-msgstr "_Tiedoston nimi:"
+msgstr "_Tiedostonimi:"
 
 #: ../data/ui/ask-rename.glade.h:10
 msgid "_Apply this option to all existing files"
@@ -181,7 +177,6 @@ msgid "<b>Target file:</b>"
 msgstr "<b>Kohdetiedosto:</b>"
 
 #: ../data/ui/file-prop.glade.h:6
-#, fuzzy
 msgid "<b>File type:</b>"
 msgstr "<b>Tiedostotyyppi:</b>"
 
@@ -194,27 +189,22 @@ msgid "Select the application used to open files of this type "
 msgstr "Valitse tämän tyyppisten tiedostojen avaamiseen käytetty sovellus "
 
 #: ../data/ui/file-prop.glade.h:9
-#, fuzzy
 msgid "<b>Total size of files:</b>"
 msgstr "<b>Tiedostojen yhteiskoko:</b>"
 
 #: ../data/ui/file-prop.glade.h:10
-#, fuzzy
 msgid "<b>Size on disk:</b>"
 msgstr "<b>Koko levyllä:</b>"
 
 #: ../data/ui/file-prop.glade.h:11
-#, fuzzy
 msgid "<b>Last modification:</b>"
 msgstr "<b>Viimeksi muokattu:</b>"
 
 #: ../data/ui/file-prop.glade.h:12
-#, fuzzy
 msgid "<b>Last access:</b>"
 msgstr "<b>Viimeksi käytetty:</b>"
 
 #: ../data/ui/file-prop.glade.h:13
-#, fuzzy
 msgid "<b>Last permissions change:</b>"
 msgstr "<b>Oikeuksia muutettu viimeksi:</b>"
 
@@ -339,7 +329,6 @@ msgid "GB"
 msgstr "GB"
 
 #: ../data/ui/filesearch.glade.h:5
-#, fuzzy
 msgid "Choose Date"
 msgstr "Valitse päiväys"
 
@@ -465,17 +454,15 @@ msgid "The preferred Web Browser will be used to open hyperlinks."
 msgstr "Oletus-WWW-selainta käytetään hyperlinkkien avaamiseen."
 
 #: ../data/ui/preferred-apps.glade.h:4
-#, fuzzy
 msgid "<b>Mail Client</b>"
 msgstr "<b>Sähköpostisovellus</b>"
 
 #: ../data/ui/preferred-apps.glade.h:5
-#, fuzzy
 msgid ""
 "The preferred Mail Client will be used to compose emails when you click on e-"
 "mail addresses."
 msgstr ""
-"Oletussähköpostisovellusta käytetään sähköpostien luomiseen, kun napsautat "
+"Oletussähköpostisovellusta käytetään sähköpostien luomiseen kun napsautat "
 "sähköpostiosoitetta."
 
 #: ../data/ui/preferred-apps.glade.h:6
@@ -549,7 +536,7 @@ msgstr "MIME-tyypille %s ei ole asetettu oletussovellusta"
 #: ../src/base/fm-path.c:177 ../src/gtk/fm-places-model.c:829
 #: ../src/gtk/fm-places-model.c:997
 msgid "Devices"
-msgstr ""
+msgstr "Laitteet"
 
 #: ../src/base/fm-path.c:183 ../src/gtk/fm-places-model.c:847
 #: ../src/gtk/fm-places-model.c:1012
@@ -717,9 +704,8 @@ msgid "Installed Applications"
 msgstr "Asennetut sovellukset"
 
 #: ../src/gtk/fm-dir-tree-model.c:420 ../src/gtk/fm-dir-tree-model.c:1205
-#, fuzzy
 msgid "<No subfolders>"
-msgstr "<Ei alikansiota>"
+msgstr "<Ei alikansioita>"
 
 #: ../src/gtk/fm-dir-tree-model.c:422 ../src/gtk/fm-dir-tree-model.c:1206
 msgid "Loading..."
@@ -734,20 +720,17 @@ msgid "_Cancel"
 msgstr "_Peru"
 
 #: ../src/gtk/fm-dnd-dest.c:412
-#, fuzzy
 msgid "C_opy Here"
-msgstr "_Kopioi"
+msgstr "_Kopioi tähän"
 
 #: ../src/gtk/fm-dnd-dest.c:413
-#, fuzzy
 msgid "_Move Here"
-msgstr "_Siirrä vasemmalle"
+msgstr "_Siirrä tähän"
 
 #. Note to translators: Link in not noun but verb here
 #: ../src/gtk/fm-dnd-dest.c:415
-#, fuzzy
 msgid "_Link Here"
-msgstr "_Linkitä"
+msgstr "_Linkitä tähän"
 
 #: ../src/gtk/fm-dnd-dest.c:861
 msgid "XDirectSave failed."
@@ -791,9 +774,8 @@ msgstr "Tiedoston _ominaisuudet"
 
 #. Note to translators: Trash in not noun but verb here
 #: ../src/gtk/fm-file-menu.c:261 ../src/gtk/fm-file-menu.c:521
-#, fuzzy
 msgid "Move to _Trash"
-msgstr "Siirrä _oikealle"
+msgstr "Siirrä _roskakoriin"
 
 #: ../src/gtk/fm-file-properties.c:364
 msgid "Image files"
@@ -850,7 +832,6 @@ msgid "<b>File:</b>"
 msgstr "<b>Tiedosto:</b>"
 
 #: ../src/gtk/fm-file-properties.c:1307
-#, fuzzy
 msgid "Multiple files"
 msgstr "Useita tiedostoja"
 
@@ -917,12 +898,10 @@ msgstr "Näytä p_iilotetut"
 
 #. Note to translators: "Mingle..." means "Do not put folders before files" but make the translation as short as possible, please!
 #: ../src/gtk/fm-folder-view.c:207
-#, fuzzy
 msgid "Mingle _Files and Folders"
 msgstr "_Sekoita tiedostot ja kansiot"
 
 #: ../src/gtk/fm-folder-view.c:208
-#, fuzzy
 msgid "_Ignore Name Case"
 msgstr "_Älä huomioi nimen kirjainkokoa"
 
@@ -947,7 +926,6 @@ msgid "Enter a name for the newly created folder:"
 msgstr "Anna nimi luodulle hakemistolle:"
 
 #: ../src/gtk/fm-folder-view.c:848
-#, fuzzy
 msgid "Creating New Folder"
 msgstr "Luodaan uusi kansio"
 
@@ -997,7 +975,6 @@ msgid "No folders are specified."
 msgstr "Kansioita ei ole määritelty."
 
 #: ../src/gtk/fm-gtk-file-launcher.c:691 ../src/gtk/fm-gtk-utils.c:554
-#, fuzzy
 msgid "Select Folder"
 msgstr "Valitse kansio"
 
@@ -1054,19 +1031,16 @@ msgid "Are you sure you want to empty the trash can?"
 msgstr "Tyhjennetäänkö roskakori?"
 
 #: ../src/gtk/fm-path-entry.c:631
-#, fuzzy
 msgid "Pa_ste and Go"
 msgstr "_Liitä ja siirry"
 
 #: ../src/gtk/fm-path-entry.c:690
-#, fuzzy
 msgid "Folder location bar"
-msgstr "Tiedostosidokset"
+msgstr "Kansiosijaintipalkki"
 
 #: ../src/gtk/fm-places-model.c:762 ../src/gtk/fm-places-model.c:976
-#, fuzzy
 msgid "Home Folder"
-msgstr "_Nimeä kansio uudestaan"
+msgstr "Kotikansio"
 
 #: ../src/gtk/fm-places-model.c:778 ../src/gtk/fm-places-model.c:984
 msgid "Desktop"
@@ -1078,9 +1052,8 @@ msgid "Applications"
 msgstr "Sovellukset"
 
 #: ../src/gtk/fm-places-model.c:812 ../src/gtk/fm-places-model.c:990
-#, fuzzy
 msgid "Filesystem Root"
-msgstr "Tiedostojärjestelmä"
+msgstr "Tiedostojärjestelmän juuri"
 
 #: ../src/gtk/fm-places-view.c:124
 msgid "_Mount Volume"
@@ -1193,32 +1166,26 @@ msgid ", "
 msgstr ", "
 
 #: ../src/gtk/fm-progress-dlg.c:560
-#, fuzzy
 msgid "Moving Files"
 msgstr "Siirretään tiedostoja"
 
 #: ../src/gtk/fm-progress-dlg.c:563
-#, fuzzy
 msgid "Copying Files"
 msgstr "Kopioidaan tiedostoja"
 
 #: ../src/gtk/fm-progress-dlg.c:566
-#, fuzzy
 msgid "Trashing Files"
 msgstr "Siirretään tiedostoja roskakoriin"
 
 #: ../src/gtk/fm-progress-dlg.c:569
-#, fuzzy
 msgid "Deleting Files"
 msgstr "Poistetaan tiedostoja"
 
 #: ../src/gtk/fm-progress-dlg.c:572
-#, fuzzy
 msgid "Creating Symlinks"
 msgstr "Luodaan symbolisia linkkejä"
 
 #: ../src/gtk/fm-progress-dlg.c:575
-#, fuzzy
 msgid "Changing File Attributes"
 msgstr "Muutetaan tiedoston ominaisuuksia"
 
@@ -1256,12 +1223,10 @@ msgid "_Hide %s"
 msgstr "_Piilota %s"
 
 #: ../src/gtk/fm-standard-view.c:821
-#, fuzzy
 msgid "_Move Left"
 msgstr "_Siirrä vasemmalle"
 
 #: ../src/gtk/fm-standard-view.c:827
-#, fuzzy
 msgid "Move _Right"
 msgstr "Siirrä _oikealle"
 
@@ -1271,7 +1236,6 @@ msgid "Show %s"
 msgstr "Näytä %s"
 
 #: ../src/gtk/fm-standard-view.c:862
-#, fuzzy
 msgid "_Forget Width"
 msgstr "_Unohda leveys"
 
@@ -1455,12 +1419,10 @@ msgid "Search"
 msgstr "Etsi"
 
 #: ../src/modules/vfs-search.c:1049
-#, fuzzy
 msgid "Search Results"
 msgstr "Hakutulokset"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:66
-#, fuzzy
 msgid "Choose Executable File"
 msgstr "Valitse suoritettava tiedosto"
 
@@ -1507,7 +1469,6 @@ msgid "_Use startup notification"
 msgstr "Käytä _käynnistysilmaisinta"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:388
-#, fuzzy
 msgid "_Desktop Entry"
 msgstr "_Työpöytäkäynnistin"
 
